argo/wailord/keycloak/keycloak/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-skipverify@kubernetescrd
spec:
  tls:
    - hosts:
        - auth.jackhil.de
      secretName: jackhil.de-cert
  rules:
    - host: auth.jackhil.de
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jscknet-kc-service
                port:
                  number: 8443
